--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,3 +1,6 @@
 {
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "spellcheck": false,
+  "promptDelete": false,
+  "readableLineLength": false
 }
